Project

General

Profile

Actions

Bug #16471

closed

Image removal doesn't necessarily clean up all rbd_mirroring entries

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If an image was partially created (due to a failure), attempting to remove the image will not clean up its rbd_mirroring entries. Therefore, when the rbd-mirror daemon attempts to re-create the image, the image creation will fail:

2016-06-24 09:41:02.854974 7f803220c700 -1 librbd: cannot enable mirroring: (17) File exists
2016-06-24 09:41:02.854989 7f803220c700 -1 librbd: error enabling mirroring: (17) File exists
2016-06-24 09:43:46.170620 7f803220c700 -1 rbd::mirror::image_replayer::CreateImageRequest: 0x7f802417e1e0 handle_create_image: failed to create local image: (17) File exists
2016-06-24 09:43:46.170634 7f803220c700 -1 rbd::mirror::image_replayer::BootstrapRequest: 0x7f7ef48fcab0 handle_create_local_image: failed to create local image: (17) File exists

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16514: jewel: Image removal doesn't necessarily clean up all rbd_mirroring entriesResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16514: jewel: Image removal doesn't necessarily clean up all rbd_mirroring entries added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF